# dollop

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
impligen/: Cargo.toml
impligen/src/: lib.rs
impligen/tests/: simple_alt.rs
with_generics/: Cargo.toml
with_generics/src/: lib.rs
with_generics/tests/: cross_module.rs  simple.rs
