[package]
name = "impligen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = """
Masquerading implicit generics for struct implementations
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0.100", features = ["full"] }
proc-macro-error = "1.0"
